--- a/wilma-functionaltest/resources/stubconfig/responseformatter/stubConfigWithInvalidClass.json
+++ b/wilma-functionaltest/resources/stubconfig/responseformatter/stubConfigWithInvalidClass.json
@@ -7,17 +7,17 @@
         "comment": "random comment",
         "conditionDescriptor": {
           "condition": {
-            "class": "com.epam.sandbox"
+            "class": "OrPatternChecker"
           }
         },
         "responseDescriptor": {
           "code": 404,
           "delay": 0,
-          "mimeType": "xml",
+          "mimeType": "json",
           "templateName": "exampleTemplate1",
           "responseFormatterSet": [
             {
-              "responseFormatterSetInvoker": "responseFormatterSet1"
+              "responseFormatterSetInvoker": "response-formatter-set1"
             }
           ]
         }
@@ -26,30 +26,20 @@
     "templates": [
       {
         "name": "exampleTemplate1",
-        "type": "external",
-        "resource": "com.epam.sandbox"
+        "type": "xml",
+        "resource": "something"
       }
     ],
     "responseFormatterSets": [
       {
-        "name": "responseFormatterSet1",
+        "name": "response-formatter-set1",
         "responseFormatterSet": [
           {
             "responseFormatter": {
-              "class": "com.epam.sandbox"
+              "class": "InvalidClass"
             }
           }
         ]
-      }
-    ],
-    "interceptors": [
-      {
-        "name": "Request-Interceptor-Jared",
-        "class": "com.epam.sandbox"
-      },
-      {
-        "name": "Response-Interceptor-Jared",
-        "class": "com.epam.sandbox"
       }
     ]
   }
