--- a/wilma-functionaltest/resources/stubconfig/responseformatter/stubConfigWithResponseFormatterClass.json
+++ b/wilma-functionaltest/resources/stubconfig/responseformatter/stubConfigWithResponseFormatterClass.json
@@ -2,12 +2,12 @@
   "wilmaStubConfiguration": {
     "dialogDescriptors": [
       {
-        "name": "dialog-descriptor1",
+        "name": "dialog-descriptor",
         "usage": "always",
         "comment": "random comment",
         "conditionDescriptor": {
           "condition": {
-            "class": "OrHeaderChecker"
+            "class": "OrPatternChecker"
           }
         },
         "responseDescriptor": {
@@ -17,7 +17,7 @@
           "templateName": "exampleTemplate1",
           "responseFormatterSet": [
             {
-              "responseFormatterSetInvoker": "responseFormatterSet1"
+              "responseFormatterSetInvoker": "response-formatter-set1"
             }
           ]
         }
@@ -32,12 +32,14 @@
     ],
     "responseFormatterSets": [
       {
-        "name": "responseFormatterSet1",
-        "responseFormatterSet": {
-          "responseFormatter": {
-            "class": "com.epam.sandbox"
+        "name": "response-formatter-set1",
+        "responseFormatterSet": [
+          {
+            "responseFormatter": {
+              "class": "NewTestResponseFormatter"
+            }
           }
-        }
+        ]
       }
     ]
   }
