func test is ready to go - next: api parts

--- a/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
+++ b/wilma-application/modules/wilma-stub-configuration-parser/src/main/resources/StubConfig.json
@@ -474,14 +474,14 @@
         "name": {
           "$ref": "#/definitions/uniqueNameDefinition"
         },
-        "conditionSet": {
+        "conditionDescriptor": {
           "$ref": "#/definitions/conditionDescriptorDefinition"
         }
       },
       "additionalProperties": false,
       "required": [
         "name",
-        "conditionSet"
+        "conditionDescriptor"
       ],
       "minItems": 1
     },
