--- a/wilma-functionaltest/resources/DropableStubConfig.json
+++ b/wilma-functionaltest/resources/DropableStubConfig.json
@@ -1,5 +1,6 @@
 {
   "wilmaStubConfiguration": {
+    "groupName": "Droppable";
     "dialogDescriptors": [
       {
         "name": "error-pattern-descriptor1",
