--- a/wilma-functionaltest/resources/enabledisable/stubConfigSecond.json
+++ b/wilma-functionaltest/resources/enabledisable/stubConfigSecond.json
@@ -1,5 +1,6 @@
 {
   "wilmaStubConfiguration": {
+    "groupName": "testSecond",
     "dialogDescriptors": [
       {
         "name": "error-pattern-descriptor",
