--- a/wilma-functionaltest/resources/stubconfig/config/stubConfigWithEndlessLoopInResponseFormatterSet.json
+++ b/wilma-functionaltest/resources/stubconfig/config/stubConfigWithEndlessLoopInResponseFormatterSet.json
@@ -33,15 +33,19 @@
     "responseFormatterSets": [
       {
         "name": "response-formatter-set1",
-        "responseFormatterSet": {
-          "responseFormatterSetInvoker": "response-formatter-set2"
-        }
+        "responseFormatterSet": [
+          {
+            "responseFormatterSetInvoker": "response-formatter-set2"
+          }
+        ]
       },
       {
         "name": "response-formatter-set2",
-        "responseFormatterSet": {
-          "responseFormatterSetInvoker": "response-formatter-set1"
-        }
+        "responseFormatterSet": [
+          {
+            "responseFormatterSetInvoker": "response-formatter-set1"
+          }
+        ]
       }
     ]
   }
