--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -19,6 +19,10 @@
 apply plugin: 'application'
 apply from: '../common.gradle'
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     compile "com.epam.gepard:gepard-core:4.0.35"
     compile 'commons-httpclient:commons-httpclient:3.1'
@@ -27,6 +31,7 @@ dependencies {
     compile 'org.codehaus.jackson:jackson-mapper-asl:1.9.13'
     compile 'com.sun.xml.fastinfoset:FastInfoset:1.2.13'
     compile "com.epam.wilma:wilma-service-api:$version"
+    compile 'com.github.everit-org.json-schema:org.everit.json.schema:1.9.1'
 }
 
 mainClassName = "com.epam.gepard.AllTestRunner"
