.net service upgrades

--- a/wilma-application/build.gradle
+++ b/wilma-application/build.gradle
@@ -85,6 +85,12 @@ task createDir {
 	dependsOn copyToReleaseRoot
 	doLast{
 	    file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/templates').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/formatters').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/interceptors').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/cache/stub_descriptors').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/condition-checkers').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/jar').mkdirs()
+        file(rootProject.rootDir.absolutePath + '/wilma-application/release/config/sequencehandlers').mkdirs()
 	}
 }
 
