--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 componentName=wilma
 buildNumber=DEV
-systemProp.sonar.host.url=http://localhost:9000
+systemProp.sonar.projectKey=epam/Wilma
+systemProp.sonar.organization=epam
+systemProp.sonar.host.url=https://sonarcloud.io
+systemProp.sonar.login=f5ad595ec59b3bb452fcf65c86dd1897b06fc763
