another build script minor update

--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ subprojects {
 
 repositories {
     jcenter()
-    maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "https://repo.maven.apache.org/maven2" }
 }
 
 buildscript {
