--- a/common.gradle
+++ b/common.gradle
@@ -36,7 +36,7 @@ version = "$wilmaVersion"+'.'+"$buildNumber"
 
 repositories {
     jcenter()
-    maven { url "http://repo.maven.apache.org/maven2" }
+    maven { url "https://repo.maven.apache.org/maven2" }
     maven { url "${myLocalRepository}" }
 }
 
