--- a/build.gradle
+++ b/build.gradle
@@ -16,30 +16,18 @@ GNU General Public License for more details.
 You should have received a copy of the GNU General Public License
 along with Wilma.  If not, see <http://www.gnu.org/licenses/>.
 ===========================================================================*/
+plugins {
+    id "org.sonarqube" version "3.0"
+}
+
 apply from: 'common.gradle'
 
 subprojects {
     apply from: "$rootDir/common.gradle"
 
+    compileJava {options.encoding = "UTF-8"}
+
     subprojects {
         task allDeps(type: DependencyReportTask) {}
     }
 }
-
-repositories {
-    jcenter()
-    maven { url "https://repo.maven.apache.org/maven2" }
-}
-
-buildscript {
-    repositories {
-        maven {
-            url "https://plugins.gradle.org/m2/"
-        }
-    }
-    dependencies {
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
-    }
-}
-
-apply plugin: "org.sonarqube"
