--- a/wilma-application/modules/wilma-message-maintainer/build.gradle
+++ b/wilma-application/modules/wilma-message-maintainer/build.gradle
@@ -22,4 +22,5 @@ dependencies {
   compile project(':wilma-application:wilma-common')
   compile project(':wilma-application:wilma-properties')
   compile project(':wilma-application:wilma-indexing')
+  compile 'javax.annotation:javax.annotation-api:1.3.2'
 }
