--- a/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
+++ b/wilma-message-search/modules/wilma-message-search-lucene/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     compile group: 'org.apache.xbean', name: 'xbean-spring', version:'4.1'
     compile project(':wilma-message-search:wilma-message-search-domain')
     compile project(':wilma-message-search:wilma-message-search-properties')
+    compile 'javax.annotation:javax.annotation-api:1.3.2'
 }
