--- a/wilma-service-api/build.gradle
+++ b/wilma-service-api/build.gradle
@@ -26,17 +26,6 @@ apply from: '../common.gradle'
 
 mainClassName = 'com.epam.wilma.service.client.WilmaService'
 
-buildscript {
-    repositories {
-        maven { url "https://plugins.gradle.org/m2/" }
-    }
-    dependencies {
-        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
-    }
-}
-
-apply plugin: "org.sonarqube"
-
 jar {
     manifest.attributes( 'provider': 'gradle')
     manifest.attributes( 'Main-Class': mainClassName)
@@ -63,14 +52,15 @@ dependencies {
 
 test.useTestNG()
 
-configurations {
-    jacoco {
+jacoco {
+    toolVersion = "0.8.2"
+}
+jacocoTestReport {
+    reports {
+        xml.enabled true
     }
 }
-
-dependencies {
-    jacoco 'org.jacoco:org.jacoco.core:0.8.0'
-}
+test.finalizedBy jacocoTestReport
 
 task copyJarToDistributions (type: Copy) {
     dependsOn(sourceZip)
