--- a/wilma-service-api/gradle.properties
+++ b/wilma-service-api/gradle.properties
@@ -1,3 +1,3 @@
 componentName=wilma-service-api
 buildNumber=DEV
-systemProp.sonar.host.url=http://localhost:9000
+//systemProp.sonar.host.url=http://localhost:9000
