--- a/wilma-service-api/build.gradle
+++ b/wilma-service-api/build.gradle
@@ -24,6 +24,9 @@ apply plugin: 'application'
 apply plugin: 'jacoco'
 apply from: '../common.gradle'
 
+checkstyle.configFile = file("$rootProject.rootDir/../../config/checkstyle/checkstyle.xml")
+checkstyle.configProperties = ['samedir' : "$rootProject.rootDir/../../config/checkstyle"]
+
 mainClassName = 'com.epam.wilma.service.client.WilmaService'
 
 jar {
