--- a/wilma-application/modules/wilma-stub-configuration-support/build.gradle
+++ b/wilma-application/modules/wilma-stub-configuration-support/build.gradle
@@ -25,6 +25,6 @@ dependencies {
     compile project(':wilma-application:wilma-browsermob-integration')
     compile 'org.json:json:20180813'
     compile group: 'com.jayway.jsonpath', name: 'json-path', version: '2.4.0'
-    compile group: "com.github.everit-org.json-schema", name: "org.everit.json.schema", version: "1.9.1"
+    compile group: 'com.github.everit-org.json-schema', name: 'org.everit.json.schema', version: '1.12.1'
     compile 'org.apache.commons:commons-lang3:3.3.2'
 }
