--- a/wilma-extras/replicator/build.gradle
+++ b/wilma-extras/replicator/build.gradle
@@ -1,13 +1,6 @@
-group 'com.epam.wilma'
-
-apply plugin: 'java'
-apply from: '../../common.gradle'
-
-checkstyle.configFile = file("$rootProject.rootDir/../../config/checkstyle/checkstyle.xml")
-checkstyle.configProperties = ['samedir' : "$rootProject.rootDir/../../config/checkstyle"]
-
 dependencies {
-    compile files("../../wilma-application/release/wilma-$version" + '.jar')
+    compile project(':wilma-application:wilma-domain')
+    compile project(':wilma-application:wilma-webapp')
     //this httpclient need to be in synch with httpclient used by the proxy lib of wilma
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version:'4.2.3'
     testCompile group: 'junit', name: 'junit', version: '4.12'
