making functional test runnable

--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -59,3 +59,7 @@ run {
     logging.captureStandardOutput LogLevel.QUIET
 }
 
+task runFunctionalTest {
+    dependsOn ':wilma-functionaltest:run'
+}
+
