first trial of the use of a new version of proxy - this is so unstable now that the old proxy (browsermob + enhancements) is enforced to be used (which is not really working anymore)

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,10 @@ plugins {
     id "org.sonarqube" version "3.0"
 }
 
+ext {
+    nettyVersion = '4.1.50.Final'
+}
+
 apply from: 'common.gradle'
 
 subprojects {
