--- a/wilma-functionaltest/build.gradle
+++ b/wilma-functionaltest/build.gradle
@@ -37,7 +37,8 @@ dependencies {
 mainClassName = "com.epam.gepard.AllTestRunner"
 
 def appArgs = ["$buildDir/resources/main/wilma-test.properties,$buildDir/resources/main/gepard.properties"]
-applicationDefaultJvmArgs = ["-Xss256k", "-Xmx512M", "-Xms512M", "-Djavax.net.ssl.trustStore=wilma.jks", "-DTEID=DEV"]
+//applicationDefaultJvmArgs = ["-Xss256k", "-Xmx512M", "-Xms512M", "-Djavax.net.ssl.trustStore=wilma.jks", "-DTEID=DEV"]
+applicationDefaultJvmArgs = ["-Xss256k", "-Xmx512M", "-Xms512M", "-Djavax.net.ssl.trustStore=trustStoreFunctionalTest.jks", "-Djavax.net.ssl.trustStorePassword=vvilma", "-DTEID=DEV"]
 if ( !hasProperty('buildTag') ) {
     project.ext.buildTag="UNSET"
 }
