--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -29,13 +29,8 @@ dependencies {
     compile project(':wilma-application:wilma-core')
     compile project(':wilma-application:wilma-properties')
 
-    //local browserUp build
-    //implementation('com.browserup:browserup-proxy-core:2.1.1-Wilma')
-    //implementation('com.browserup:browserup-proxy-mitm:2.1.1-Wilma')
-    //implementation "io.netty:netty-all:${nettyVersion}"
-
     //local mitmProxy build
-    implementation('com.epam.mitm:mitmProxy:0.5-beta-wilma-2.0.DEV') {
+    compile('com.epam.mitm:mitmJavaProxy:0.8-beta-wilma-2.0.DEV') {
         exclude(group: 'org.eclipse.jetty', module: 'jetty-server')
         exclude(group: 'org.eclipse.jetty', module: 'jetty-servlet')
     }
