--- a/wilma-test/wilma-test-server/build.gradle
+++ b/wilma-test/wilma-test-server/build.gradle
@@ -60,12 +60,11 @@ dependencies {
     compile group: 'commons-io', name: 'commons-io', version:'2.4'
     compile group: 'com.sun.xml.fastinfoset', name: 'FastInfoset', version:'1.2.13'
     testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
-    testCompile(group: 'org.testng', name: 'testng', version:'6.8.5') {
-        exclude(module: 'junit')
-    }
+    testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'cglib', name: 'cglib', version:'3.0'
 }
 
+test.useJUnit()
 
 run {
     args 'wilma.testserver.properties'
