--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -30,9 +30,8 @@ dependencies {
     compile project(':wilma-application:wilma-properties')
 
     //local mitmProxy build
-    compile('com.epam.mitm:mitmJavaProxy:0.8-beta-wilma-2.0.DEV') {
-        exclude(group: 'org.eclipse.jetty', module: 'jetty-server')
-        exclude(group: 'org.eclipse.jetty', module: 'jetty-servlet')
+    compile('com.epam.mitm:mitmJavaProxy:0.10-beta-wilma-2.0.DEV') {
+//        exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
     }
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
