98/136 best results nowadays, still lots of things to do

--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -31,7 +31,7 @@ dependencies {
 
     //local mitmProxy build
     compile('com.epam.mitm:mitmJavaProxy:0.10-beta-wilma-2.0.DEV') {
-//        exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
+        exclude(group: 'org.eclipse.jetty', module: 'jetty-io')
     }
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
