--- a/wilma-functionaltest/resources/classloader/new_stubconfig_packaged_class.json
+++ b/wilma-functionaltest/resources/classloader/new_stubconfig_packaged_class.json
@@ -7,7 +7,7 @@
         "comment": "random comment",
         "conditionDescriptor": {
           "condition": {
-            "class": "MyAlwaysTrueChecker"
+            "class": "com.epam.wilma.functionalTest.MyAlwaysTrueChecker"
           }
         },
         "responseDescriptor": {
