--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ wilma-functionaltest/gepard-run.log
 wilma-functionaltest/gradle
 wilma-functionaltest/gradlew*
 wilma-functionaltest/resources/src/**/*.class
+wilma-functionaltest/resources/preCompiled/*.class
 wilma-functionaltest/classes
 browsermob-proxy/gradlew
 browsermob-proxy/gradlew.bat
