fix sonar build

--- a/gradle.properties
+++ b/gradle.properties
@@ -7,3 +7,4 @@ systemProp.sonar.host.url=https://sonarcloud.io
 systemProp.sonar.login=f5ad595ec59b3bb452fcf65c86dd1897b06fc763
 #disable since this folder is in use for valid java files too -> systemProp.sonar.exclusions=**/external/**/*
 systemProp.sonar.java.checkstyle.reportPaths=build/reports/checkstyle/main.xml
+systemProp.sonar.exclusions=**/wilma-functionaltest/**/*
