--- a/wilma-service-api/build.gradle
+++ b/wilma-service-api/build.gradle
@@ -45,7 +45,7 @@ dependencies {
     compile group: "com.github.everit-org.json-schema", name: "org.everit.json.schema", version: "1.9.1"
     compile 'org.json:json:20180813'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
-    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    testCompile group: 'org.mockito', name: 'mockito-all', version:"${mockitoAllVersion}"
     testCompile group: 'org.testng', name: 'testng', version:'6.8.5'
 }
 
