--- a/wilma-application/modules/wilma-proxy-integration/build.gradle
+++ b/wilma-application/modules/wilma-proxy-integration/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version:'4.12'
     testCompile group: 'com.google.guava', name: 'guava', version: '29.0-jre'
-    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+    //testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
     testCompile (group: 'io.netty', name: 'netty-all', version: '4.1.51.Final')
     testCompile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.31.v20200723'
 }
