--- a/wilma-message-search/build.gradle
+++ b/wilma-message-search/build.gradle
@@ -76,7 +76,7 @@ subprojects {
         }
 	    compile group: 'org.springframework', name: 'spring-webmvc', version:'4.1.6.RELEASE'
 	    compile group: 'org.aspectj', name: 'aspectjrt', version:'1.6.9'
-	    testCompile group: 'org.mockito', name: 'mockito-all', version:'1.9.5'
+        testCompile group: 'org.mockito', name: 'mockito-all', version:"${mockitoAllVersion}"
         testImplementation group: 'junit', name: 'junit', version: "${jUnitVersion}"
     }
 
